fix: update to fix spacing

--- a/src/styles/Work.module.css
+++ b/src/styles/Work.module.css
@@ -255,7 +255,7 @@
 
 @media (min-width: 769px) {
   .introHeader {
-    padding: 200px 0;
+    padding: 200px 0 50px 0;
   }
 
   .introHeaderContent {
@@ -300,7 +300,7 @@
   }
 
   .navigationButtons {
-    margin-top: 30px;
+    margin-top: 0px;
   }
 
   .navButton {
